# apps.home.ug-mobile-ap

./: CMakeLists.txt  NOTICE  help_setting_tethering.xml  project.config  ug-setting-mobileap-efl.efl  ug-setting-mobileap-efl.manifest  ug-setting-mobileap-efl.xml
include/: mh_common_utility.h  mh_func_onoff.h  mh_popup.h  mh_string.h  mh_view_main.h  mh_view_wifi_setup.h  mobile_hotspot.h
packaging/: ug-setting-mobileap-efl.spec
po/: CMakeLists.txt  POTFILES.in  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  de_DE.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_MX.po  es_US.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  fr_FR.po  ga.po  gl.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  (+24 more)
resources/: CMakeLists.txt  tethering.edc  tethering_images.edc
src/: mh_common_utility.c  mh_connected_client.c  mh_device_rename.c  mh_func_onoff.c  mh_main_ug.c  mh_popup.c  mh_view_main.c  mh_view_wifi_setup.c
tables/: ug-setting-mobileap-efl_ChangeableColorInfo.xml
